[tool.poetry]
name = "kayo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"py-cord" = "^2.6.1"
flask = "^3.1.3"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
